# TO

TO2025STAC-151472DawidOchman-LAB1/Projekt1_vol2/: CMakeLists.txt  README.md  lab1  main.cpp
TO2025STAC-151472DawidOchman-LAB1/Projekt1_vol2/include/: Application.h  ConsoleUI.h  Currency.h  CurrencyConverter.h  HttpClient.h  ICurrencyConverter.h  ICurrencyDataProvider.h  IInputValidator.h  IUserInterface.h  InputValidator.h  NBPXmlDataProvider.h
TO2025STAC-151472DawidOchman-LAB1/Projekt1_vol2/src/: Application.cpp  ConsoleUI.cpp  Currency.cpp  CurrencyConverter.cpp  HttpClient.cpp  InputValidator.cpp  NBPXmlDataProvider.cpp
TO2025STAC-151472DawidOchman-LAB2/Project2/: CMakeLists.txt  main.cpp
TO2025STAC-151472DawidOchman-LAB2/Project2/include/: IPolar2D.h  IVector.h  Polar2D.h  Polar2DAdapter.h  Polar2DInheritance.h  Vector2D.h  Vector3D.h  Vector3DDecorator.h  Vector3DInheritance.h
TO2025STAC-151472DawidOchman-LAB2/Project2/src/: Polar2D.cpp  Polar2DAdapter.cpp  Polar2DInheritance.cpp  Vector2D.cpp  Vector3D.cpp  Vector3DDecorator.cpp  Vector3DInheritance.cpp
TO2025STAC-151472DawidOchman-LAB3/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SimulationCore.cpp  SimulationCore.h  Vector2D.h
TO_lab4/: CMakeLists.txt
TO_lab4/include/: Car.h  Location.h  MapWidget.h  SKKM.h  Strategies.h  Unit.h
TO_lab4/src/: Car.cpp  MapWidget.cpp  SKKM.cpp  Unit.cpp  main.cpp
